# cuda_snippets

./: .gitignore  README.md
cmake/modules/: Cuda10.cmake
common/: common.h  image.h  ocv_image.h
cuda_stream_example/: CMakeLists.txt  basic_single_stream.cu  basic_two_streams_correct.cu  basic_two_streams_slow.cu
dot_product/: CMakeLists.txt  dot_product.cu
dot_product_with_atomic_lock/: CMakeLists.txt  atomic_lock.h  dot_product_with_atomic_lock.cu
histogram/: CMakeLists.txt  histogram_cpu.cu  histogram_gpu_global_mem_atomics.cu  histogram_gpu_shared_mem_atomics.cu
julia_set/: CMakeLists.txt  julia_cpu.cu  julia_gpu.cu
ray_tracing/: CMakeLists.txt  ray_tracing_constant_mem.cu  ray_tracing_no_constant_mem.cu
ripple_animation/: CMakeLists.txt  ripple_anim.cu
set_get_gpu_info/: CMakeLists.txt  enum_gpu.cu  set_gpu.cu
vec_add/: main.cc  vec_add.h
vec_add_blocks_long/: CMakeLists.txt  main.cc  vec_add.cu  vec_add.h
vec_add_simple/: CMakeLists.txt  vec_add.cu  vec_add.h
